fix zoom in on input focus on mobile devices

--- a/src/components/Header/SearchBar.module.css
+++ b/src/components/Header/SearchBar.module.css
@@ -26,6 +26,9 @@
 }
 
 .input {
+  font-size: var(
+    --font-size-large
+  ); /* prevent zoom in on input focus on mobile devices  */
   background-color: transparent;
   height: 36px;
   margin: 0;
